5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1674_1103.log
== TEST (2019-04-24 19:06:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input (" 1: "))
a= float(input (" 1: "))
b= float(input (" 2: "))

if((a <= x) and (x <= b)):
	print(x,"pertence ao intervalo" a , b )
elif((a <= x) not (x <=b)):
	print(x,"nao pertence ao intervalo" a , b)
else:
	print("Entradas a e b invalidas")
-- ERROR:
File "XXXX", line 9
    print(x,"pertence ao intervalo" a , b )
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:07:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input (" 1: "))
a= float(input (" 1: "))
b= float(input (" 2: "))

if((a <= x) and (x <= b)):
	print(x,"pertence ao intervalo", a , b )
elif((a <= x) not (x <=b)):
	print(x,"nao pertence ao intervalo", a , b)
else:
	print("Entradas a e b invalidas")
-- ERROR:
File "XXXX", line 10
    elif((a <= x) not (x <=b)):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:07:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input (" 1: "))
a= float(input (" 1: "))
b= float(input (" 2: "))

if((a <= x) and (x <= b)):
	print(x,"pertence ao intervalo", a , b )
elif((a <= x) not (x <=b)):
	print(x,"nao pertence ao intervalo", a , b)
else:
	print("Entradas a e b invalidas")
-- ERROR:
File "XXXX", line 10
    elif((a <= x) not (x <=b)):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:08:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input (" 1: "))
a= float(input (" 1: "))
b= float(input (" 2: "))

if((a <= x) and (x <= b)):
	print(x,"pertence ao intervalo", a , b )
elif((a <= x) not (x <= b)):
	print(x,"nao pertence ao intervalo", a , b)
else:
	print("Entradas a e b invalidas")
-- ERROR:
File "XXXX", line 10
    elif((a <= x) not (x <= b)):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:09:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input (" 1: "))
a= float(input (" 1: "))
b= float(input (" 2: "))

if((a <= x) and (x <= b)):
	print(x,"pertence ao intervalo", a , b )
elif((a <= x) or (x <= b)):
	print(x,"nao pertence ao intervalo", a , b)
else:
	print("Entradas a e b invalidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:09:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input (" 1: "))
a= float(input (" 1: "))
b= float(input (" 2: "))

if((a <= x) and (x <= b)):
	print(x,"pertence ao intervalo", a ,",", b )
elif((a <= x) or (x <= b)):
	print(x,"nao pertence ao intervalo", a , b)
else:
	print("Entradas a e b invalidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:10:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input (" 1: "))
a= float(input (" 1: "))
b= float(input (" 2: "))

if((a <= x) and (x <= b)):
	print(x,"pertence ao intervalo", a ,",", b )
elif((a <= x) or (x <= b)):
	print(x,"nao pertence ao intervalo", a, "," , b)
else:
	print("Entradas a e b invalidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:10:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input (" 1: "))
a= float(input (" 1: "))
b= float(input (" 2: "))

if((a <= x) and (x <= b)):
	print(x,"pertence ao intervalo", a ,",", b )
elif((a <= x) or (x <= b)):
	print(x,"nao pertence ao intervalo", a, "," , b)
else:
	print("Entradas a e b invalidas")
-- EXECUTION TIME:
0.140535
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:11:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input (" 1: "))
a= float(input (" 1: "))
b= float(input (" 2: "))

if((a <= x) and (x <= b)):
	print(x,"pertence ao intervalo", a ,",", b )
elif((a <= x) or (x <= b)):
	print(x,"nao pertence ao intervalo", a, "," , b)
else:
	print("Entradas",a,"e",b,"invalidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:12:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input (" 1: "))
a= float(input (" 1: "))
b= float(input (" 2: "))

if((a <= x) and (x <= b)):
	print(x,"pertence ao intervalo", a ,",", b )
elif((a <= x) or (x <= b)):
	print(x,"nao pertence ao intervalo", a, "," , b)
else(b <= a):
	print("Entradas",a,"e",b,"invalidas")
-- ERROR:
File "XXXX", line 12
    else(b <= a):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:12:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input (" 1: "))
a= float(input (" 1: "))
b= float(input (" 2: "))

if((a <= x) and (x <= b)):
	print(x,"pertence ao intervalo", a ,",", b )
elif(b <= a):
	print("Entradas",a,"e",b,"invalidas")
else:
	print(x,"nao pertence ao intervalo", a, "," , b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:13:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input (" 1: "))
a= float(input (" 1: "))
b= float(input (" 2: "))

if((a <= x) and (x <= b)):
	print(x,"pertence ao intervalo", a ,",", b )
elif(b <= a):
	print("Entradas",a,"e",b,"invalidas")
else:
	print(x,"nao pertence ao intervalo", a, "," , b)
-- EXECUTION TIME:
0.135466
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
